--- a/eq-chat-alyzer/frontend/package.json
+++ b/eq-chat-alyzer/frontend/package.json
@@ -36,5 +36,9 @@
     "tsx": "^4.9.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
