--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
     "license": "ISC",
     "name": "training-monorepo",
     "version": "1.0.0",
-    
     "dependencies": {},
-
     "devDependencies": {
         "editorconfig": "^2.0.0"
     },
-
     "scripts": {},
     
-    "workspaces": []
+    "workspaces": [
+        "eq-chat-alyzer/frontend"
+    ]
 }
