Added a package.json workspace for eq-chat-alyzer

--- a/eq-chat-alyzer/frontend/package.json
+++ b/eq-chat-alyzer/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-eq-alyzer",
+  "name": "eq-chat-alyzer-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
