--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "scripts": {},
     "workspaces": [
         "eq-chat-alyzer",
-        "eq-chat-alyzer/bff",
-        "eq-chat-alyzer/frontend"
+        "eq-chat-alyzer/log-reader",
+        "eq-chat-alyzer/protocol-buffers"
     ]
 }
