Creating a new project to experiment with D3

--- a/d3-experimentation/package.json
+++ b/d3-experimentation/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "d3-experimentation",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "devDependencies": {
-    "d3": "^7.9.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+    "name": "d3-experimentation",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "devDependencies": {
+        "d3": "^7.9.0"
+    },
+    "scripts": {
+        "build": "webpack --config ./webpack-dev.config.js --mode development",
+        "build:prod": "webpack --config ./webpack-prod.config.js --mode production",
+        "start:dev": "webpack serve --config ./webpack-dev.config.js --mode development"
+    },
+    "author": "",
+    "license": "ISC"
 }
