--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "name": "training-monorepo",
     "version": "1.0.0",
     "devDependencies": {
+        "css-loader": "^7.1.2",
         "editorconfig": "^2.0.0",
+        "html-webpack-plugin": "^5.6.0",
+        "style-loader": "^4.0.0",
         "webpack": "^5.91.0",
         "webpack-cli": "^5.1.4",
         "webpack-dev-server": "^5.0.4"
