Streamlined the web component template element

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "eq-chat-alyzer/log-reader",
         "eq-chat-alyzer/protocol-buffers",
         "d3-experimentation",
-        "web-component-template"
+        "web-component-template",
+        "test-site"
     ]
 }
