--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "devDependencies": {
         "css-loader": "^7.1.2",
         "editorconfig": "^2.0.0",
+        "html-loader": "^5.0.0",
         "html-webpack-plugin": "^5.6.0",
         "style-loader": "^4.0.0",
         "webpack": "^5.91.0",
