Updated with better unit testing

--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -17,5 +17,8 @@
     "test": "mocha --config=./.mocha.js"
   },
   "author": "Patrick Ortiz",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "pdfjs-dist": "^4.3.136"
+  }
 }
